<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/settings"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:src="@drawable/setting"
        android:layout_marginTop="25sp"
        android:layout_marginLeft="25sp"

        />

    <TextView
        android:id="@+id/titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="25sp"
        android:text="@string/title"
        />


    <TextView
        android:id="@+id/explication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/titre"
        android:layout_marginTop="100sp"
        android:text="@string/choisir"
        />


    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/explication"
        android:layout_marginTop="25sp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">


        <Button
            android:id="@+id/deuxjoueur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:text="@string/deuxjoueur" />

        <Button
            android:id="@+id/nivun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:text="@string/nivun"
            android:layout_marginTop="15sp"
            android:onClick="clickNiveau"/>

        <Button
            android:id="@+id/nivdeux"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:text="@string/nivdeux"
            android:layout_marginTop="15sp"
            android:onClick="clickNiveau"/>

        <Button
            android:id="@+id/nivtrois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:text="@string/nivtrois"
            android:layout_marginTop="15sp"
            android:onClick="clickNiveau"/>



    </LinearLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-9696781235898812/8637868962">
    </com.google.android.gms.ads.AdView>


<!--    mon id de pub : ca-app-pub-9696781235898812/8637868962-->
</RelativeLayout>
